# Game-and-Watch-Donkey-Kong-Jr.

./: .gitignore  CMakeLists.txt  Game1.pro  Game1.pro.user.2a0ad61.4.10-pre1  Game1.pro.user.376e09b.4.8-pre1  bird.cpp  bird.h  birdevent.cpp  birdevent.h  game.cpp  game.h  img.qrc  key.cpp  key.h  keyEvent.cpp  keyEvent.h  life.cpp  life.h  main.cpp  monkey.cpp  monkey.h  monkeyfallevent.cpp  monkeyfallevent.h  monkeymovehandler.cpp  monkeymovehandler.h  myrect.cpp.autosave
images/: main_sprite.qrc
src/services/: VisualMapper.cpp  VisualMapper.h
visual_events/: CrocodileEvent.cpp  CrocodileEvent.h
visual_items/: Crocodile.cpp  crocodile.h
